[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/jack_o_lantern.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://images/light.png" type="Texture" id=3]
[ext_resource path="res://images/directlight.png" type="Texture" id=4]
[ext_resource path="res://sounds/Splat.ogg" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 1.0

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=3]

[node name="Player" type="RigidBody2D"]
physics_material_override = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 5
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 1, 0.376471, 0, 1 )
range_layer_min = -2
range_layer_max = 2

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 4 )
range_item_cull_mask = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WallLight" type="Light2D" parent="."]
texture = ExtResource( 3 )
range_item_cull_mask = 2

[node name="WallLight2" type="Light2D" parent="."]
texture = ExtResource( 3 )
range_item_cull_mask = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
